Adding content and initial styles.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,33 @@
-Hello from Team Stachesquatch
+<div class="column_span">
+  <h2>Movember</h2>
+  <h1>Team Stachesquatch</h1>
+</div>
+
+<div class="left_column">
+  <div class="intro_graphic">
+    <%= image_tag "movember_group.png", :width=> "540" %>
+  </div>
+</div>
+
+<div class="right_column">
+  <p>It's Movember and time to make a difference.</p>
+  
+  <p>Men's health is a cause we're passionate about. Our commitment is to grow a mustache for the month of November and by changing our appearance, raise vital awareness and funds men's health, specifically prostate and testicular cancer initiatives.</p>
+
+  <p>This year we are selling a limited edition T-Shirt to raise funds. With a purchase, you are not only supporting a great cause, but you also get a really cool T-Shirt.</p>
+
+  <p>Thanks,<br/>- Team Stachesquach</p>
+</div>
+
+<div class="rest_columns">&nbsp;</div>
+
+<div class="left_column">
+  <h2>American Apparel Jersey T-Shirt</h2>
+</div>
+
+<div class="right_column">
+  <div class="goal">125 shirts sold (of goal)</div>
+
+  <div class="buy">buy men's button</div>
+  <div class="buy">buy women's button</div>
+</div>
