--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Stachesquatch</title>
+  <title>Movember - Team Stachesquatch</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div class ="body">
+  <div class="header">
+    <div class="logo">[logo]</div>
+  </div>
+
+  <div class="content">
+    <%= yield %>
+  </div>
+
+</div>
 
 </body>
 </html>
