Added more styling to page.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,8 +26,17 @@
 </div>
 
 <div class="right_column">
-  <div class="goal">125 shirts sold (of goal)</div>
+  <div class="goal">
+    <h1>125</h1>
+    shirts sold
+  </div>
 
-  <div class="buy">buy men's button</div>
-  <div class="buy">buy women's button</div>
+  <div class="buy">
+    <h1>$20</h1>
+    <h2>Unisex T-Shirt</h2>
+  </div>
+  <div class="buy">
+    <h1>$20</h1>
+    <h2>Ladies T-Shirt</h2>
+  </div>
 </div>
