Added place holder images for shirt designs.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,7 +65,7 @@ p {
 }
 
 .left_column {
-  width: 560px;
+  width: 620px;
   float: left;
   margin-bottom: 15px;
 }
@@ -73,6 +73,7 @@ p {
 .right_column {
   width: 300px;
   float: left;
+  margin-left: 15px;
   margin-bottom: 15px;
 }
 
