--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class="left_column">
   <div class="intro_graphic">
-    <%= image_tag "movember_group.png", :width=> "540" %>
+    <%= image_tag "stachesquatch_2012.jpg", :width=> "620" %>
   </div>
 </div>
 
@@ -23,6 +23,14 @@
 
 <div class="left_column">
   <h2>American Apparel Jersey T-Shirt</h2>
+  <div class="shirt_design">
+    <%= image_tag "shirt_design.jpg"%>
+  </div>
+
+  <span class="thumbnail"><%= image_tag "thumbnail.jpg"%></span>
+  <span class="thumbnail"><%= image_tag "thumbnail.jpg"%></span>
+  <span class="thumbnail"><%= image_tag "thumbnail.jpg"%></span>
+  <span class="thumbnail"><%= image_tag "thumbnail.jpg"%></span>
 </div>
 
 <div class="right_column">
