--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -29,7 +29,7 @@ p {
 .goal {
   background-color: $creme;
   padding: 1em;
-  margin: 15px 0;
+  margin: 30px 0 15px;
   
   h1, h2 {
     font-size: 32px;
@@ -40,4 +40,14 @@ p {
   h2{
     font-size: 26px;
   }
+}
+
+.shirt_design {
+  text-align: center;
+  display: block;
+  margin: 5px 0 20px 0
+}
+
+.thumbnail {
+  padding: 0 5px 0 5px;
 }
