More styling updates to make the layout look more like the comp.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,24 +9,9 @@ p {
   margin-top: 1em;
 }
 
-.buy {
-  background-color: $red;
-  padding: 1em;
-  margin: 15px 0;
-  color: $white;
-
-  h1, h2 {
-    font-size: 32px;
-    font-weight: 300;
-    color: $white;
-  }
-  
-  h2{
-    font-size: 26px;
-  }
-}
-
 .goal {
+  height: 200px;
+  border-radius: 4px;
   background-color: $creme;
   padding: 1em;
   margin: 30px 0 15px;
@@ -50,4 +35,22 @@ p {
 
 .thumbnail {
   padding: 0 5px 0 5px;
+}
+
+.buy {
+  border-radius: 4px;
+  background-color: $red;
+  padding: 1em;
+  margin: 15px 0;
+  color: $white;
+
+  h1, h2 {
+    font-size: 32px;
+    font-weight: 300;
+    color: $white;
+  }
+  
+  h2{
+    font-size: 26px;
+  }
 }
