Added typekit fonts, updated styling for goal.

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -10,6 +10,7 @@ $dark_red:    #aa241b;
 $half_brown:  #A09086;
 $green:       #10c793;
 $yellow:      #fdfcb2;
+$grey:        #E9E3DC;
 
 /* Other colors */
 $light_red:   adjust-lightness($red, 20);
