--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,10 +34,8 @@
 </div>
 
 <div class="right_column">
-  <div class="goal">
-    <h1>125</h1>
-    shirts sold
-  </div>
+
+  <%= render :partial => 'goal' %>
 
   <div class="buy">
     <h1>$20</h1>
