--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,28 +22,29 @@ body {
   color: $brown;
   font-family: museo-sans,Tahoma,sans-serif;
   font-weight: 300;
+  font-size: 16px;
 }
 
 h1, h2, h3 {
   font-family: museo-slab,Tahoma,sans-serif;
-  line-height: 24px;
   color: $orange;
   margin-bottom: 3px;
   margin-top: 0;
 }
 
 h1 {
-  font-weight: 500;
-  font-size: 26px;  
+  font-weight: 300;
+  font-size: 37px;  
+  line-height: 32px;
 }
 
 h2 {
   font-weight: 300;
-  font-size: 20px;
+  font-size: 17px;
 }
 
 p {
-  font-size: 13px;
+  font-size: 16px;
   line-height: 18px;
 }
 
@@ -56,8 +57,8 @@ p {
 }
 
 .logo {
-  margin: 0 25px;
   padding: 10px;
+  margin-right: auto; margin-left: auto; width: 980px;
 }
 
 .content {
@@ -67,14 +68,14 @@ p {
 .left_column {
   width: 620px;
   float: left;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .right_column {
   width: 300px;
   float: left;
-  margin-left: 15px;
-  margin-bottom: 15px;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
 
 .reset_columns {
