--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,29 +1,57 @@
 @import "colors";
 
-p {
-  font-size: 1em;
-  font-weight: 300;
-}
-
 .intro_graphic {
   margin-top: 1em;
 }
 
 .goal {
-  height: 200px;
-  border-radius: 4px;
-  background-color: $creme;
-  padding: 1em;
+  border-radius: 2px;
+  background-color: $grey;
+  padding: 20px;
   margin: 30px 0 15px;
   
   h1, h2 {
-    font-size: 32px;
-    font-weight: 300;
     color: $brown;
   }
-  
-  h2{
-    font-size: 26px;
+
+  .sold {
+    float: left;
+    width: 130px;
+  }
+
+  .days_left {
+    float: left;
+    margin-left: 35px;
+  }
+
+  .reset {
+    clear: both;
+  }
+
+  .meter {
+    margin: 20px 0 10px;
+    border-radius: 7px; 
+    border: 2px solid $red;
+    background-color: $white;
+    height: 15px;
+
+    .fill {
+      background-color: $red;
+      border-radius: 3px;
+      height: 15px;
+    }
+  }
+}
+
+.buy {
+  border-radius: 2px;
+  background-color: $red;
+  padding: 1em;
+  margin: 15px 0;
+  color: $white;
+
+  h1, h2 {
+    color: $white;
   }
 }
 
@@ -35,22 +63,4 @@ p {
 
 .thumbnail {
   padding: 0 5px 0 5px;
-}
-
-.buy {
-  border-radius: 4px;
-  background-color: $red;
-  padding: 1em;
-  margin: 15px 0;
-  color: $white;
-
-  h1, h2 {
-    font-size: 32px;
-    font-weight: 300;
-    color: $white;
-  }
-  
-  h2{
-    font-size: 26px;
-  }
 }
