Fixing up header.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
 <div class ="body">
   <div class="header">
-    <div class="logo">[logo]</div>
+    <div class="logo">Movember</div>
   </div>
 
   <div class="content">
