Tweaking header sizes.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,11 +34,16 @@ h1, h2, h3 {
 
 h1 {
   font-weight: 300;
-  font-size: 37px;  
+  font-size: 42px;  
   line-height: 32px;
 }
 
 h2 {
+  font-weight: 300;
+  font-size: 22px;
+}
+
+h3 {
   font-weight: 300;
   font-size: 17px;
 }
