Added fav icon, added slide out controls for buying (to hide ugly buttons).

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -50,8 +50,18 @@
   margin: 15px 0;
   color: $white;
 
+  &:hover {
+    color: $dark_red;
+    cursor: pointer;
+  }
+
   h1, h2 {
     color: $white;
+
+    &:hover {
+      color: $dark_red;
+      cursor: pointer;
+    }
   }
 
   .cost {
