--- a/app/views/home/_goal.html.erb
+++ b/app/views/home/_goal.html.erb
@@ -4,9 +4,9 @@
     shirts sold
   </div>
 
-  <div class="days_left">
-    <h1>15</h1>
-    days to go 
+  <div class="progress">
+    <h1>$600</h1>
+    dollars raised
   </div>
 
   <div class="reset"></div>
