--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,10 @@
 
 <div class ="body">
   <div class="header">
-    <div class="logo">Movember</div>
+    <div class="inner_header">
+      <div class="logo">[logo]</div>
+      <div class="share">Share: [T] [F] [P] </div>
+    </div>
   </div>
 
   <div class="content">
