--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,14 +1,28 @@
 @import "colors";
 
+.design_column {
+  width: 500px;
+  float: left;
+  margin-bottom: 20px; 
+  margin-top: 15px;
+}
+
+.intro_column {
+  width: 360px;
+  float: left;
+  margin-left: 40px;
+  margin-bottom: 20px;
+}
+
 .intro_graphic {
   margin-top: 1em;
 }
 
 .goal {
-  border-radius: 2px;
-  background-color: $grey;
-  padding: 20px;
-  margin: 30px 0 15px;
+  margin: 30px 0;
+  padding: 20px 0;
+  border-top: solid 1px $grey;
+  border-bottom: solid 1px $grey;
   
   h1, h2 {
     color: $brown;
@@ -16,12 +30,11 @@
 
   .sold {
     float: left;
-    width: 130px;
+    width: 180px;
   }
 
-  .days_left {
+  .progress {
     float: left;
-    margin-left: 35px;
   }
 
   .reset {
@@ -29,26 +42,26 @@
   }
 
   .meter {
-    margin: 20px 0 10px;
+    margin: 20px 0 5px;
     border-radius: 7px; 
-    border: 2px solid $red;
-    background-color: $white;
-    height: 15px;
+    background-color: $grey;
+    height: 12px;
 
     .fill {
       background-color: $red;
-      border-radius: 3px;
-      height: 15px;
+      border-radius: 7px 0 0 7px;
+      height: 12px;
     }
   }
 }
 
 .buy {
-  border-radius: 2px;
-  background-color: $red;
-  padding: 1em;
-  margin: 15px 0;
-  color: $white;
+  border-radius: 4px;
+  background-color: $blue;
+  padding: 25px;
+  margin: 25px;
+  color: white;
+  text-align: center;
 
   &:hover {
     color: $dark_red;
@@ -57,24 +70,13 @@
 
   h1, h2 {
     color: $white;
+    font-size: 36px;
+    text-shadow: $grey 0.1em;
 
     &:hover {
-      color: $dark_red;
+      color: $grey;
       cursor: pointer;
     }
-  }
-
-  .cost {
-    float: left;
-    width: 85px;
-  }
-
-  .product {
-    float: left;
-  }
-
-  .reset {
-    clear: both;
   }
 
   .purchase {
@@ -82,13 +84,49 @@
   } 
 }
 
-
 .shirt_design {
   text-align: center;
   display: block;
-  margin: 5px 0 20px 0
+  margin: 5px 0;
+}
+
+.thumbnails {
+  text-align: center;
 }
 
 .thumbnail {
-  padding: 0 5px 0 5px;
+  padding: 0 3px;
+  width: 110px;
+}
+
+.reset_columns {
+  clear: both;
+  height: 5px;
+}
+
+.about_header {
+  margin: 5px 0 0 0;
+  border-radius: 2px;
+  height: 20px;
+  width: 900px;
+  padding: 5px 15px;
+  font-size: 18px;
+  background-color: $orange;
+  color: $white;
+  font-weight: 300;
+  font-family: museo-slab,Tahoma,sans-serif;
+}
+
+.about_column {
+  width: 360px;
+  float: left;
+  margin-bottom: 20px; 
+  margin-top: 15px;
+}
+
+.group_column {
+  width: 520px;
+  float: left;
+  margin-left: 40px;
+  margin-bottom: 20px;
 }
