--- a/app/views/home/_design.html.erb
+++ b/app/views/home/_design.html.erb
@@ -1,10 +1,10 @@
 <div class="shirt_design">
-  <%= image_tag "shirt_design.jpg", :width => 500%>
+  <%= image_tag "shirt_design.jpg", :width => 513%>
 </div>
 
 <div class="thumbnails">
-  <span><%= image_tag "thumbnail.jpg", :width => 100, :class => 'thumbnail' %></span>
-  <span><%= image_tag "thumbnail.jpg", :width => 100, :class => 'thumbnail' %></span>
-  <span><%= image_tag "thumbnail.jpg", :width => 100, :class => 'thumbnail' %></span>
-  <span><%= image_tag "thumbnail.jpg", :width => 100, :class => 'thumbnail' %></span>
+  <span><%= image_tag "thumbnail.jpg", :class => 'thumbnail' %></span>
+  <span><%= image_tag "thumbnail.jpg", :class => 'thumbnail' %></span>
+  <span><%= image_tag "thumbnail.jpg", :class => 'thumbnail' %></span>
+  <span><%= image_tag "thumbnail.jpg", :class => 'thumbnail last' %></span>
 </div>
