--- a/app/views/home/_goal.html.erb
+++ b/app/views/home/_goal.html.erb
@@ -15,5 +15,11 @@
     <div class="fill" style="width:40%">&nbsp;</div>
   </div>
 
-  40% of 75 shirt goal
+  <div class="shirts_sold">
+    <span class="em">40%</span> of 75 shirt goal
+  </div>
+  <div class="days_to_go">
+    <span class="em">15</span> days to go
+  </div>
+  <div class="reset"></div>
 </div>
