Updating images, filling in team link.

--- a/app/views/home/_intro.html.erb
+++ b/app/views/home/_intro.html.erb
@@ -1,3 +1,5 @@
 <p>It's Movember and time to make a difference.</p>
 <p>This year we are selling limited edition Tees to raise funds for men's health, specifically prostate and testicular cancer initiatives.  With a purchase, you are not only supporting a great cause but you also get a really cool T-shirt.</p>
-<p>Thanks,<br/>Team Stachesquatch</p>
+<p>Thanks,<br/>
+<%= image_tag "signature.jpg"%>
+</p>
