--- a/app/views/home/_message.html.erb
+++ b/app/views/home/_message.html.erb
@@ -4,4 +4,4 @@
 
 <p>This year we are selling a limited edition T-Shirt to raise funds. With a purchase, you are not only supporting a great cause, but you also get a really cool T-Shirt.</p>
 
-<p><%=link_to "Check out our team page here", "#"%></p>
+<p><%=link_to "Check out our team page here", "http://us.movember.com/team/448725", :target => "_blank"%></p>
