--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,3 +26,7 @@
     <%= image_tag "stachesquatch_2012.jpg", :width=> "535" %>
   </div>
 </div>
+
+<div class="about_footer">&nbsp;</div>
+
+<%= render :partial => 'footer' %>
