--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,12 +41,12 @@ h1 {
 h2 {
   font-weight: 300;
   font-size: 26px;
-  line-height: 20px;
+  line-height: 24px;
 }
 
 h3 {
   font-weight: 300;
-  font-size: 17px;
+  font-size: 24px;
 }
 
 a {
@@ -65,10 +65,10 @@ p {
 }
 
 .header {
-  height : 50px;
+  height : 60px;
   width: 100%;
   border-bottom: 3px solid $orange;
-  margin: 0 0 25px 0;
+  margin: 0 0 15px 0;
 
   .inner_header {
     padding: 10px;
@@ -84,7 +84,22 @@ p {
       width: 300px;
       float: right;
       text-align: right;
-      padding-right: 60px;
+      padding-top: 20px;
+
+      .twitter {
+        width: 80px;
+        float: right;
+      }
+      .fb {
+        float: right;
+        width: 75px;
+        padding-left: 8px;
+      }
+      .pintrest {
+        float: right;
+        width: 50px;
+        padding-left: 15px;
+      }
     }
 
   }
