--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,10 @@
 <div class ="body">
   <div class="header">
     <div class="inner_header">
-      <div class="logo">[logo]</div>
-      <div class="share">Share: [T] [F] [P] </div>
+      <div class="logo"><%= image_tag "ci_logo_small.jpg" %></div>
+      <div class="share">
+        <%= render :partial => "share_buttons" %>
+      </div>
     </div>
   </div>
 
@@ -32,6 +34,9 @@
   </div>
 
 </div>
+
+
+<%= render :partial => "share_assets" %>
 
 </body>
 </html>
