Added admin interface to allow us to update the campaign goals.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <div class="inner_header">
       <div class="logo"><%= image_tag "ci_logo_small.jpg" %></div>
       <div class="share">
-        <%= render :partial => "share_buttons" %>
+        <%= render :partial => "/home/share_buttons" %>
       </div>
     </div>
   </div>
@@ -36,7 +36,7 @@
 </div>
 
 
-<%= render :partial => "share_assets" %>
+<%= render :partial => "/home/share_assets" %>
 
 </body>
 </html>
