--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -52,3 +52,5 @@ vital awareness and funds for men's
 health issues</p>
 <p><%=link_to "Learn More", "http://us.movember.com/mens-health/"%></p>
 </div>
+
+<div class="reset_columns">&nbsp;</div>
