ability to turn branding off via url.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,10 @@
 <div class ="body">
   <div class="header">
     <div class="inner_header">
-      <div class="logo"><%=link_to(image_tag("ci_logo_small.jpg"), "http://www.customink.com") %></div>
+
+      <% if branding_enabled? %>
+        <div class="logo"><%=link_to(image_tag("ci_logo_small.jpg"), "http://www.customink.com") %></div>
+      <% end %>
       <div class="share">
         <%= render :partial => "/home/share_buttons" %>
       </div>
@@ -36,11 +39,13 @@
 </div>
 
 <div class="footer">
-  <div class="inner">
-    CustomInk is your source for custom t-shirts. <%= link_to "Privacy Policy", "http://www.customink.com/policies/#privacy", :class => "first", :target => 'new' %> <%= link_to "User Agreement", "http://www.customink.com/policies", :target => 'new'  %>
-    <br/>
-    &copy 2012 CustomInk, LLC. All rights reserved. CustomInk is a registered trademark of CustomInk LLC. "T-shirts Unite!" and the "Inky" octopus are trademarks of CustomInk, LLC.
-  </div>
+  <% if branding_enabled? %>
+    <div class="inner">
+      CustomInk is your source for custom t-shirts. <%= link_to "Privacy Policy", "http://www.customink.com/policies/#privacy", :class => "first", :target => 'new' %> <%= link_to "User Agreement", "http://www.customink.com/policies", :target => 'new'  %>
+      <br/>
+      &copy 2012 CustomInk, LLC. All rights reserved. CustomInk is a registered trademark of CustomInk LLC. "T-shirts Unite!" and the "Inky" octopus are trademarks of CustomInk, LLC.
+    </div>
+  <% end %>
 </div>
 
 
