Changed team name to proper spelling, color and layout tweaks to match comp.  Glued in clickable thumbnails.  Still need the proper images.

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -11,6 +11,8 @@ $half_brown:  #A09086;
 $green:       #10c793;
 $yellow:      #fdfcb2;
 $grey:        #E9E3DC;
+$header_grey: #c7c8ca;
+$rule:        #e6e7e8;
 
 /* Other colors */
 $light_red:   adjust-lightness($red, 20);
