--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Update Stachesquatch Goals</h1>
+<h1>Update Stachequatch Goals</h1>
 
 <div style="margin-top: 25px;">
   <%= form_tag(goals_path) do %>
