--- a/app/views/home/_intro.html.erb
+++ b/app/views/home/_intro.html.erb
@@ -1,5 +1,5 @@
-<p>It's Movember and time to make a difference.</p>
-<p>This year we are selling limited edition Tees to raise funds for men's health, specifically prostate and testicular cancer initiatives.  With a purchase, you are not only supporting a great cause but you also get a really cool T-shirt.</p>
+<h3>Okay fellas - it's time to bring back the Stache.</h3>
+<p>This year you can grab a limited edition Team Stachequatch Tee to rally for the cause. Each purchase will not only help fund prostate and testicular research, but you'll also get a pretty sweet t-shirt.</p>
 <p>Thanks,<br/>
 <%= image_tag "signature.jpg"%>
 </p>
