--- a/app/views/home/_message.html.erb
+++ b/app/views/home/_message.html.erb
@@ -1,7 +1,9 @@
-<p>It's Movember and time to make a difference.</p>
+<h3>Team Stachequatch</h3>
 
-<p>Men's health is a cause we're passionate about. Our commitment is to grow a mustache for the month of November and by changing our appearance, raise vital awareness and funds men's health, specifically prostate and testicular cancer initiatives.</p>
+<p>Who are we, you ask? We are husbands, fathers, sons, and brothers. We are neighbors and friends. We take pride in our work and in our families, and each year we band together to raise awareness and funding for men’s health issues through the power of the moustache.</p>
 
-<p>This year we are selling a limited edition T-Shirt to raise funds. With a purchase, you are not only supporting a great cause, but you also get a really cool T-Shirt.</p>
+<p>Join us this Movember to celebrate the moustache, a powerful symbol that stands strong in support of research and funding for prostate and testicular cancer.</p>
 
-<p><%=link_to "Check out our team page here", "http://us.movember.com/team/448725", :target => "_blank"%></p>
+<p>Whether you’re rocking the pencil, the cowboy, the handlebar, or the elusive walrus, it makes no difference - The Mo the better!</p>
+
+<p>Don't like the shirts?  You can <%=link_to "donate to Team Stachequatch directly", "http://us.movember.com/team/448725", :target => "_blank"%>.</p>
