--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="column_span">
   <h2>Movember</h2>
-  <h1>Team Stachesquatch</h1>
+  <h1>Team Stachequatch</h1>
 </div>
 
 <div class="design_column">
@@ -15,7 +15,7 @@
 
 <div class="reset_columns">&nbsp;</div>
 
-<div class="about_header">About</div>
+<div class="about_header">The Story</div>
 
 <div class="about_column">
     <%= render :partial => 'message' %>
@@ -27,6 +27,6 @@
   </div>
 </div>
 
-<div class="about_footer">&nbsp;</div>
+<div class="about_footer">About The Shirts</div>
 
 <%= render :partial => 'footer' %>
