--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@ body {
 
 h1, h2, h3 {
   font-family: museo-slab,Tahoma,sans-serif;
-  color: $orange;
+  color: $red;
   margin-bottom: 3px;
   margin-top: 0;
 }
@@ -66,15 +66,14 @@ p {
 }
 
 .header {
-  height : 60px;
+  height : 30px;
   width: 100%;
-  border-bottom: 3px solid $orange;
+  background-color: $header_grey;
   margin: 0 0 15px 0;
 
   .inner_header {
-    padding: 10px;
+    padding: 5px;
     margin-right: auto; margin-left: auto; width: $layout_size;
-    color: $orange;
 
     .logo {
       width: 100px;
@@ -85,7 +84,6 @@ p {
       width: 300px;
       float: right;
       text-align: right;
-      padding-top: 20px;
 
       .twitter {
         width: 80px;
@@ -113,8 +111,8 @@ p {
 
 .footer {
   width: 100%;
-  background-color: $red;
-  margin: 35px 0 4px;
+  background-color: $header_grey;
+  margin: 25px 0 4px;
 
   color: $white;
   font-size: 12px;
