Fixing image borders for shirt samples (IE)

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -120,6 +120,14 @@
   .last {
     padding-right: 0px;
   }
+
+  a {
+    text-decoration: none;
+
+    img {
+      border: 0;
+    }
+  }
 }
 
 .reset_columns {
