--- a/app/views/home/_design.html.erb
+++ b/app/views/home/_design.html.erb
@@ -1,10 +1,10 @@
 <div class="shirt_design">
-  <%= image_tag "shirt_design_one.jpg", :width => 513, :class=>"fullsize" %>
+  <%= image_tag "shirt_design_one.jpg", :class=>"fullsize" %>
 </div>
 
 <div class="thumbnails">
-  <%= link_to image_tag("thumbnail.jpg", :class => 'thumbnail'), "javascript:void(0);", :data => "one" %>
-  <%= link_to image_tag("thumbnail.jpg", :class => 'thumbnail'), "javascript:void(0);", :data => "two" %>
-  <%= link_to image_tag("thumbnail.jpg", :class => 'thumbnail'), "javascript:void(0);", :data => "three" %>
-  <%= link_to image_tag("thumbnail.jpg", :class => 'thumbnail last'), "javascript:void(0);", :data => "four" %>
+  <%= link_to image_tag("thumbnail1.jpg", :class => 'thumbnail'), "javascript:void(0);", :data => "one" %>
+  <%= link_to image_tag("thumbnail2.jpg", :class => 'thumbnail'), "javascript:void(0);", :data => "two" %>
+  <%= link_to image_tag("thumbnail3.jpg", :class => 'thumbnail'), "javascript:void(0);", :data => "three" %>
+  <%= link_to image_tag("thumbnail4.jpg", :class => 'thumbnail last'), "javascript:void(0);", :data => "four" %>
 </div>
