--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -20,26 +20,17 @@
 <div class="reset_columns"></div>
 
 <div class="service">
-  <h3>Printing</h3>
-  <p>CustomInk is printing and individually 
-shipping our T-shirts to you with the 
-same signature care used to serve their 
-one million plus customers. They will  
-batch print the shirts twice during the 
-month of November and be delivered by 
-the following dates.</p>
+  <h3>Quality Printing</h3>
+  <p>CustomInk is printing and individually shipping our T-shirts to you with the same signature care used to serve their one million plus customers. They will batch print the shirts once on Nov. 16th and will be shipped out towards the end of Movember.</p>
 </div>
 
 <div class="quality">
   <h3>Next Level T-shirts</h3>
-  <p>Our T-shirts are printed on American 
-Apparel Products.  They are 
-Contemporary, lightweight, stylish and 
-made in the USA.</p>
+  <p>Team Stachequatch t-shirts will be printed on Next Level products, which happen to go great with lip-ticklers of all shapes and sizes. Next Level shirts are soft, trim, lightweight and stylish.</p>
 
   <p>
-    <%= link_to 'Uni-sex sizing line-up', 'http://www.customink.com/items/sizing/15000_lineup/standard.htm', :target => "_new" %> <br/>
-    <%= link_to 'Ladies sizing line-up', 'http://www.customink.com/items/sizing/30000_lineup/standard.htm', :target => "_new" %>
+    <%= link_to 'Uni-sex sizing line-up', 'http://www.customink.com/items/sizing/172100_lineup/standard.htm', :target => "_new" %> <br/>
+    <%= link_to 'Ladies sizing line-up', 'http://www.customink.com/items/sizing/172500_lineup/standard.htm', :target => "_new" %>
   </p>
 </div>
 
@@ -51,7 +42,7 @@ of men’s faces, in the US and around the
 world. With their Mo's, these men raise 
 vital awareness and funds for men's 
 health issues</p>
-<p><%=link_to "Learn More", "http://us.movember.com/mens-health/"%></p>
+<p><%=link_to "Learn More", "http://us.movember.com/mens-health/", :target => "_new"%></p>
 </div>
 
 <div class="reset_columns">&nbsp;</div>
