--- a/app/views/home/_message.html.erb
+++ b/app/views/home/_message.html.erb
@@ -6,4 +6,4 @@
 
 <p>Whether you’re rocking the pencil, the cowboy, the handlebar, or the elusive walrus, it makes no difference - The Mo the better!</p>
 
-<p>Don't like the shirts?  You can <%=link_to "donate to Team Stachequatch directly", "http://us.movember.com/team/448725", :target => "_blank"%>.</p>
+<p>If you want to support our staches, but don’t need a super sweet tee, you can <%=link_to "donate directly to Team Stachequatch.", "http://us.movember.com/team/448725", :target => "_new"%></p>
