Fixing facebook like button.

--- a/app/views/home/_share_buttons.html.erb
+++ b/app/views/home/_share_buttons.html.erb
@@ -2,7 +2,7 @@
   <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fstachesquatch.herokuapp.com%2F&media=http%3A%2F%2Flocalhost%3A3001%2Fassets%2Fshirt_design.jpg&description=It's%20Movember%20and%20time%20to%20make%20a%20difference.%20%20This%20year%20we%20are%20selling%20limited%20edition%20Tees%20to%20raise%20funds%20for%20men's%20health." class="pin-it-button" count-layout="horizontal"><img border="0" src="//assets.pinterest.com/images/PinExt.png" title="Pin It" /></a>
 </div>
 <div class="fb">
-  <div class="fb-like" data-href="http://stachesquatch.herokuapp.com/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false" data-font="tahoma"></div>
+  <div class="fb-like" data-href="http://stachequatch.herokuapp.com/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false" data-font="tahoma"></div>
 </div>
 <div class="twitter">
   <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a> 
