copy is black, not brown

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@ body {
   margin: 0;
   padding-top: 0;
   min-height: 100%;
-  color: $brown;
+  color: $black;
   font-family: museo-sans,Tahoma,sans-serif;
   font-weight: 300;
   font-size: 16px;
