--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -15,7 +15,7 @@
   margin-bottom: 20px;
 
   h3 {
-    color: $brown;
+    color: $black;
   }
 }
 
@@ -30,7 +30,7 @@
   border-bottom: solid 1px $grey;
 
   h1, h2 {
-    color: $brown;
+    color: $black;
   }
 
   .sold {
@@ -162,7 +162,7 @@
   margin-top: 15px;
 
   h3 {
-    color: $brown;
+    color: $black;
   }
 }
 
@@ -184,7 +184,7 @@
   }
 
   h3 {
-    color: $brown;
+    color: $black;
   }
 }
 
