--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -77,7 +77,6 @@
   border-radius: 4px;
   background-color: $button_color;
   box-shadow: inset 0 3px 0 -1px $button_top, inset 0 -2px 0 0 $button_bottom;
-  padding: 25px;
   margin: 10px;
   color: white;
   text-align: center;
@@ -96,6 +95,12 @@
     &:hover {
       cursor: pointer;
     }
+  }
+
+  .buy_now {
+    width: 310px;
+    height: 40px;
+    padding: 25px;
   }
 
   .purchase {
