--- a/app/views/home/_buy_now.html.erb
+++ b/app/views/home/_buy_now.html.erb
@@ -1,5 +1,5 @@
 <div class="buy">
-  <h1>$25 Buy Now</h1>
+  <div class="buy_now"><h1>$25 Buy Now</h1></div>
   
   <div class="purchase" style="display:none">
     <a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_50805c8b23472" href="https://www.wepay.com/stores/255710/item/891086">Checkout</a><script type="text/javascript">var WePay = WePay || {};WePay.load_widgets = WePay.load_widgets || function() { };WePay.widgets = WePay.widgets || [];WePay.widgets.push( {object_id: 891086,widget_type: "store_item_add_to_cart",anchor_id: "wepay_widget_anchor_50805c8b23472",widget_options: {store_id: 255710,show_item_price: false,show_item_images: false,button_text_sold_out: "Sold Out",show_item_custom_options: true,button_text: "Checkout"}});if (!WePay.script) {WePay.script = document.createElement('script');WePay.script.type = 'text/javascript';WePay.script.async = true;WePay.script.src = 'https://static.wepay.com/min/js/widgets.v2.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(WePay.script, s);} else if (WePay.load_widgets) {WePay.load_widgets();}</script>
