--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,9 @@
 <div class="intro_column">
   <%= render :partial => 'intro' %>
   <%= render :partial => 'goal' %>
-  <%= render :partial => 'buy_now' %>
+  
+  <%#= render :partial => 'buy_now' %>
+  <div class="sold_out"><h1>Sold Out!</h1></div>
 </div>
 
 <div class="reset_columns">&nbsp;</div>
