closing store (again)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,8 +11,8 @@
   <%= render :partial => 'intro' %>
   <%= render :partial => 'goal' %>
   
-  <%= render :partial => 'buy_now' %>
-  <!-- <div class="sold_out"><h1>Sold Out!</h1></div> -->
+  <%#= render :partial => 'buy_now' %>
+  <div class="sold_out"><h1>Sold Out!</h1></div>
 </div>
 
 <div class="reset_columns">&nbsp;</div>
