--- a/app/views/home/_goal.html.erb
+++ b/app/views/home/_goal.html.erb
@@ -1,25 +1,25 @@
 <div class="goal">
   <div class="sold">
-    <h1><%= @goal.shirts_sold %></h1>
+    <h1>93</h1>
     shirts sold
   </div>
 
   <div class="progress">
-    <h1>$<%= @goal.dollars_raised %></h1>
+    <h1>$2325</h1>
     dollars raised
   </div>
 
   <div class="reset"></div>
 
   <div class="meter">
-    <div class="fill" style="width:<%=@goal.shirts_sold_as_percentage%>%">&nbsp;</div>
+    <div class="fill" style="width:124%">&nbsp;</div>
   </div>
 
   <div class="shirts_sold">
-    <span class="em"><%= number_to_percentage(@goal.shirts_sold_as_percentage,  :precision => 0)%></span> of <%= @goal.total_shirt_goal %> shirt goal
+    <span class="em">124%</span> of 75 shirt goal
   </div>
   <div class="days_to_go">
-    <span class="em"><%= @goal.days_left_in_campaign%></span> days to go
+    <span class="em">0</span> days to go
   </div>
   <div class="reset"></div>
 </div>
