--- a/app/views/layouts/mini_goal.html.erb
+++ b/app/views/layouts/mini_goal.html.erb
@@ -4,7 +4,7 @@
   <title>Goal</title>
 
   <script type="text/javascript">
-    <script type="text/javascript" src="//use.typekit.net/wtk3tfu.js"></script>
+    <script type="text/javascript" src="http://use.typekit.net/wtk3tfu.js"> </script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </script>
 
