fixing fonts, again.

--- a/app/views/layouts/mini_goal.html.erb
+++ b/app/views/layouts/mini_goal.html.erb
@@ -3,10 +3,8 @@
 <head>
   <title>Goal</title>
 
-  <script type="text/javascript">
-    <script type="text/javascript" src="http://use.typekit.net/wtk3tfu.js"> </script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-  </script>
+  <script type="text/javascript" src="http://use.typekit.net/wtk3tfu.js"> </script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){};</script>
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= csrf_meta_tags %>
